<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor4"
    android:orientation="vertical"
    tools:context=".activities.AddCityActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textColor="@color/textColor4"
        android:textSize="35sp"
        android:textStyle="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <EditText
            android:id="@+id/searchCityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="6"
            android:autoText="false"
            android:ems="10"
            android:hint="@string/enterCityName"
            android:importantForAutofill="no"
            android:inputType="none|text"
            android:textColorHint="@color/cardColor4"
            tools:ignore="Deprecated"
            android:textColor="@color/textColor4"/>

        <ImageView
            android:id="@+id/citySearchView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="2"
            android:contentDescription="@string/citySearch" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewAddCity"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>