<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weatherViewCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    android:background="@color/cardColor4"
    android:orientation="vertical">


    <TextView
        android:id="@+id/cityNameWeatherCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/textColor4"
        android:textSize="30sp"
        android:textStyle=""
        tools:text="@string/testCity" />

    <TextView
        android:id="@+id/weatherDescriptionWeatherCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/textColor4"
        android:textSize="16sp"
        tools:text="@string/testDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/weatherImageViewWeatherCard"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="40"
            android:contentDescription="@string/weatherIcon"
            android:src="@drawable/ic_cloudy" />

        <TextView
            android:id="@+id/currentTempWeatherCard"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="40"
            android:gravity="center"
            android:textColor="@color/textColor4"
            android:textSize="80sp"
            tools:text="@string/testTemp1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_weight="20"
            android:orientation="vertical">

            <TextView
                android:id="@+id/maxTempWeatherCard"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:gravity="center_horizontal|bottom"
                android:text="@string/testTemp1"
                android:textAllCaps="false"
                android:textColor="@color/textColor4"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/minTempWeatherCard"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:gravity="center_horizontal"
                android:textColor="@color/textColor4"
                android:textSize="20sp"
                tools:text="@string/testTemp1" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>




